[gd_scene load_steps=11 format=3 uid="uid://dfi02hgcspv5o"]

[ext_resource type="Script" path="res://mob.gd" id="1_85dvw"]
[ext_resource type="Texture2D" uid="uid://dadl8sl0ceyop" path="res://art/mob_idle.png" id="2_f11ku"]
[ext_resource type="Texture2D" uid="uid://ds4mm85yfj6ov" path="res://art/mob_run1.png" id="3_c0ojw"]
[ext_resource type="PackedScene" uid="uid://8heg8ep15o5d" path="res://gun.tscn" id="3_kwxxi"]
[ext_resource type="Texture2D" uid="uid://c53etf8lpabq7" path="res://art/mob_run2.png" id="4_31nw5"]
[ext_resource type="Texture2D" uid="uid://n103b405f6my" path="res://art/mob_run3.png" id="5_hg360"]
[ext_resource type="Script" path="res://mob_state_machine.gd" id="7_5n824"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rmulm"]
light_mode = 2

[sub_resource type="SpriteFrames" id="SpriteFrames_pd0qd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f11ku")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c0ojw")
}, {
"duration": 1.0,
"texture": ExtResource("4_31nw5")
}, {
"duration": 1.0,
"texture": ExtResource("5_hg360")
}, {
"duration": 1.0,
"texture": ExtResource("4_31nw5")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kfuoi"]
radius = 3.0
height = 15.0

[node name="Mob" type="CharacterBody2D" groups=["characters"]]
script = ExtResource("1_85dvw")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_rmulm")
rotation = 1.5708
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_pd0qd")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_kfuoi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 30.0
neighbor_distance = 300.0
max_neighbors = 5
max_speed = 200.0

[node name="Gun" parent="." instance=ExtResource("3_kwxxi")]

[node name="AnimatedSprite2D" parent="Gun/Muzzle" index="0"]
position = Vector2(28, 0)

[node name="TriggerTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="WatchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("7_5n824")

[node name="TextEdit" type="Label" parent="."]
visible = false
offset_left = -29.0
offset_top = 1.0
offset_right = 32.0
offset_bottom = 24.0
text = "PATROL"

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="TriggerTimer" to="." method="_on_trigger_timer_timeout"]
[connection signal="timeout" from="WatchTimer" to="." method="_on_watch_timer_timeout"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]

[editable path="Gun"]
